--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: required
+language: python
 services:
   - docker
 
@@ -8,3 +9,6 @@ env:
 script:
   - docker-compose build
   - docker-compose up
+  - ./backend/tests/test_request.py
+  - ./backend/tests/request_to_backend.py
+  - docker-compose down
