--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
 sudo: required
 language: python
+python:
+  - "3.6"
+
 services:
   - docker
 
 env:
   COMPOSE_VERSION: 1.4.2
+
+install:
+  - pip install requests
 
 script:
   - docker-compose build
