--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
   COMPOSE_VERSION: 1.4.2
 
 install:
-  - pip install requests
+  - pip install -r requirements.txt
 
 script:
   - docker-compose build
