--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,11 @@ python:
 services:
   - docker
 
-env:
-  COMPOSE_VERSION: 1.4.2
-
 install:
   - pip install -r requirements.txt
 
 script:
-  - docker-compose build
-  - docker-compose up -d
+  - docker build -t backend1 ./backend
+  - docker run -p 9000:9000 backend1
   - python3 ./backend/tests/request_to_backend.py
-  - docker-compose down
+  - docker stop $(docker ps -a -q)
