--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ install:
 
 script:
   - docker build -t backend1 ./backend
-  - docker run -p 9000:9000 backend1
+  - docker run -d -p 9000:9000 backend1
   - python3 ./backend/tests/request_to_backend.py
   - docker stop $(docker ps -a -q)
