--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     build: ./backend
     ports:
       - "9000:9000"
+    environment: 
+      - APPID:
+
   frontend:
     build: ./frontend
     ports:
