--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,10 @@ services:
       - "8000:8000"
     depends_on:
       - backend
+
+  robot:
+    build: ./robot
+    ports:
+      - "4444:4444"
+    depends_on:
+      - frontend
